--- a/index.html
+++ b/index.html
@@ -9,20 +9,35 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/style/main.css">
+
     <title>latewinter21-gregslist</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-dark navbar-expand bg-dark text-light">
-            <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png" width="45" height="45" alt="" loading="lazy">
-                <span class="ml-2">latewinter21-gregslist</span>
-            </a>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-info">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"> <b><i>
+                            <h2>Gregslist</h2>
+                        </i></b></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="#">Cars</a>
+                        <a class="nav-link" href="#">Houses</a>
+                        <a class="nav-link" href="#">Jobs</a>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     <main class="container-fluid">
-        <div class="row">
+        <div class="row p-2 mt-5 pt-5">
             <div class="col">
                 <h1>Cars</h1>
                 <form class="form-inline" onsubmit="app.carsController.createCar(event)">
@@ -54,19 +69,90 @@
                         <input type="text" name="imgUrl" id="imgUrl" class="form-control" placeholder="ImgUrl"
                             aria-describedby="helpId">
                     </div>
-                    <button class="btn btn-info" type="submit">Create</button>
+                    <button class="btn btn-primary" type="submit">Create</button>
                 </form>
             </div>
         </div>
-        <div class="row" id="cars">
 
+        <div class="row p-4" id="cars">
         </div>
+
         <hr>
-        <div class="row">
+
+
+        <div class="row p-2">
             <div class="col">
                 <h1>Houses</h1>
+                <form class="form-inline" onsubmit="app.houseController.createHouse(event)">
+                    <div class="form-group">
+                        <input type="text" name="rooms" id="rooms" class="form-control" placeholder="Rooms"
+                            aria-describedby="helpId">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="size" id="size" class="form-control" placeholder="Size"
+                            aria-describedby="helpId">
+                    </div>
+                    <div class="form-group">
+                        <input type="boolean" name="garage" id="garage" class="form-control" placeholder="Garage"
+                            aria-describedby="helpId">
+                    </div>
+                    <div class="form-group">
+                        <input type="number" name="price" id="price" class="form-control" placeholder="Price"
+                            aria-describedby="helpId">
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" name="imgUrl" id="imgUrl" class="form-control" placeholder="ImgUrl"
+                            aria-describedby="helpId">
+                    </div>
+                    <button class="btn btn-primary" type="submit">Create</button>
+                </form>
             </div>
         </div>
+
+        <div class="row p-4" id="house">
+        </div>
+
+
+
+
+        <hr>
+
+        <div class="row p-2">
+            <div class="col">
+                <h1>Jobs</h1>
+                <form class="form-inline" onsubmit="app.jobsController.createJobs(event)">
+                    <div class="form-group">
+                        <input type="text" name="description" id="description" class="form-control"
+                            placeholder="Job Title" aria-describedby="helpId">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="pay" id="pay" class="form-control" placeholder="Hourly Rate"
+                            aria-describedby="helpId">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="experience" id="experience" class="form-control"
+                            placeholder="Experience Required" aria-describedby="helpId">
+                    </div>
+                    <div class="form-group">
+                        <input type="number" name="apply" id="apply" class="form-control" placeholder="Applicants"
+                            aria-describedby="helpId">
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" name="imgUrl" id="imgUrl" class="form-control" placeholder="ImgUrl"
+                            aria-describedby="helpId">
+                    </div>
+
+                    <button class="btn btn-primary" type="submit">Create</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="row p-4" id="jobs">
+        </div>
+
+
     </main>
     <footer class="container-fluid bg-dark text-light">
         <div class="row text-center">
